--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
     reset_timedout_connection on;
     send_timeout 15;
     server_tokens off;
-    client_max_body_size 10m;
+    client_max_body_size 4g;
 
     client_body_buffer_size 4K;
     client_header_buffer_size 1k;
