--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 .*.swp
 /env
 /dl
+/.config
+/.config.old
 /bin
 /build_dir
 /staging_dir
@@ -10,6 +12,7 @@
 /logs
 /feeds
 /feeds.conf
+/files
 /overlay
 /package/feeds
 /package/openwrt-packages
@@ -23,7 +26,6 @@ key-build*
 TAGS*~
 git-src
 .git-credentials
-.config.old
 /*.log
 .project
 .cproject
