--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -8,8 +8,8 @@
 name: OpenWrt-CI
 
 on:
-#  schedule:
-#    - cron: 0 20 * * *
+  schedule:
+    - cron: 0 20 * * *
   release:
     types: [published]
 
@@ -46,6 +46,7 @@ jobs:
 
       - name: Update feeds
         run: |
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
@@ -55,6 +56,7 @@ jobs:
       - name: Make download
         run: |
           make download -j8
+          find dl -size -1024c -exec rm -f {} \;
 
       - name: Compile firmware
         run: |
